<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <TextView
        android:text="@string/nrp"
        style="@style/EditTextTitle"/>

    <EditText
        android:id="@+id/edt_nrp"
        android:inputType="number"
        android:maxLength="10"
        style="@style/EditTextBase"/>

    <TextView
        android:text="@string/nama_mahasiswa"
        style="@style/EditTextTitle"/>

    <EditText
        android:id="@+id/edt_name"
        android:inputType="textCapWords"
        android:maxLines="1"
        style="@style/EditTextBase"/>

    <TextView
        android:text="@string/alamat_mahasiswa"
        style="@style/EditTextTitle"/>

    <EditText
        android:id="@+id/edt_address"
        android:inputType="textCapSentences"
        android:maxLines="1"
        style="@style/EditTextBase"/>

    <TextView
        android:text="@string/foto_mahasiswa"
        style="@style/EditTextTitle"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_mahasiswa"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_account_circle_black_512dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/add_mahasiswa"
            android:textSize="15sp"/>
    </RelativeLayout>
</LinearLayout>